# PyWEB_HW12

./: README.md
HW12/: main.py  pyproject.toml
HW12/migrations/versions/: 1daa6c1e8fe7_init.py  2ebb399c3d80_init.py
HW12/src/: schemas.py
HW12/src/conf/: config.ini
HW12/src/database/: models.py
HW12/src/repository/: users.py
HW12/src/routes/: auth.py  contacts.py
HW12/src/services/: auth.py
