[tool.poetry]
name = "hw12"
version = "0.1.0"
description = ""
authors = ["Denis Bilokon <greenjuiced@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.13"
fastapi = "^0.95.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
alembic = "^1.10.4"
libgravatar = "^1.0.4"
passlib = "^1.7.4"
psycopg2 = "^2.9.6"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
pydantic = {extras = ["email"], version = "^1.10.7"}
python-multipart = "^0.0.6"
bcrypt = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
